Minor cleanup in comments.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 
 <head>
   <title>Automatic time zone detection using JavaScript</title>
-  <!-- Script by Josh Fraser (http://www.onlineaspect.com) -->
-  <script language='javascript' src='detect_timezone.js'></script>
+  <!-- 
+  Script by Josh Fraser (http://www.onlineaspect.com)
+  Continued by jon at pageloom dot com as jsTimezoneDetect.
+  Open source on bitbucket.org.
+  -->
+  <script type="text/javascript" src='detect_timezone.js'></script>
 </head>
 
 <body>
