Moved a few variables to constants. Included a minified version.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   Continued by jon at pageloom dot com as jsTimezoneDetect.
   Open source on bitbucket.org.
   -->
-  <script type="text/javascript" src='detect_timezone.js'></script>
+  <script type="text/javascript" src='detect_timezone.min.js'></script>
 </head>
 
 <body>
