--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     border-color: #000;
   }
   </style>
-  <script type="text/javascript" src='detect_timezone.min.js'></script>
+  <script type="text/javascript" src='detect_timezone.js'></script>
 </head>
 
 <body>
