--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html>
 
 <head>
@@ -9,8 +11,8 @@
   -->
   <style type="text/css">
   body {
-    font-family: arial, helvetica, sans-serif;
-    background-color: #eee;
+    font-family: helvetica, sans-serif;
+    background-color: #ddd;
     color: #333;
     text-shadow:1px 1px 1px #fff;
   }
@@ -32,23 +34,58 @@
   }
   
   div#content p {
-    padding: 10px;
-    font-size: 1.2em;
-    line-height: 1.5em;
+    padding: 3px 10px 3px 10px;
+    text-align: left;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: normal;
   }
   
   p.info {
-    width: 550px;
+    width: 730px;
     margin-left: auto;
     margin-right: auto;
-    font-size: 0.8em;
+    font-size: 11px;
     font-style: italic;
+    font-weight: normal;
     text-align: right;
     letter-spacing: 1px;
   }
   
+  p.instructions {
+    width: 520px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 13px;
+    text-align: left;
+    letter-spacing: 1px;
+    line-height: 15px;
+  }
+  
+  ul {
+    width: 520px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 13px;
+    letter-spacing: 1px;
+    line-height: 17px;
+  }
+  
   h1 {
     text-align: center;
+    margin-bottom: 0px;
+  }
+  
+  h3 {
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: -5px;
+  }
+  
+  h3.omg {
+    color: green;
   }
   
   a {
@@ -68,12 +105,29 @@
 
 <body>
 
-<h1>Automatic time zone detection using JavaScript</h3>
+<h1>Automatic Timezone Detection Using JavaScript</h3>
+<p class="info">This script is open source and hosted as <a href="https://bitbucket.org/pellepim/jstimezonedetect"/>jsTimezoneDetect @ Bitbucket</a>.</p>
 <div id="content">
 <p id="tz_info"></p>
 </div>
-<p class="info">This script is open source and hosted as <a href="https://bitbucket.org/pellepim/jstimezonedetect"/>jsTimezoneDetect @ Bitbucket</a>.</p>
+<h3>How do I test this script?</h3>
+<p class="instructions">To test the detection script, simply change your system timezone and refresh this page. In Chrome you will have to open a new tab for the new timezone to be detected, and Safari needs to be restarted (unfortunately nothing that JavaScript can solve).</p>
+<h3>What is the Olson Database?</h3>
+<p class="instructions">The Olson database, also known as the <strong>tz database</strong>. Is a public domain collaborative compilation of information about the world's timezones.</p>
+<p class="instructions">It is widely used as basis for timezone information in operating systems and software. Most platforms and programming languages have libraries that support it.</p>
+<p class="instructions"><a href="http://en.wikipedia.org/wiki/Tz_database">More at Wikipedia!</a></p>
+<h3 class="omg">I don't like the timezone this script gives me!</h3>
+<p class="instructions">This script does not do geolocation. It simply picks the most populated timezone among several roughly identical ones.</p>
+<p class="instructions">For example, it is impossible to distinguish between different cities in Europe. This script will return Europe/Berlin regardless of where you live in the Central European timezone.</p>
+<p class="instructions"><a href="https://bitbucket.org/pellepim/jstimezonedetect/wiki/Detection_List">Click here for the list of timezones this script is able to detect</a>.</p>
+<h3 class="omg">NO CAN HAZ TIMEZONEZ?!?11</h3>
+<p class="instructions">If this script fails to correctly determine your timezone, <a href="https://bitbucket.org/pellepim/jstimezonedetect/issues/new">Please report it!</a></p>
+<p class="instructions">When you report an issue. Please tell us </p>
+<ul>
+    <li>what timezone your computer is set to,</li>
+    <li>what operating system you use, and</li>
+    <li>what browser you use.</li>
+</ul>
 
 </body>
-
 </html>
