--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     font-size: 13px;
     text-align: left;
     letter-spacing: 1px;
-    line-height: 15px;
+    line-height: 18px;
   }
   
   ul {
@@ -114,7 +114,7 @@
 <p id="tz_info"></p>
 </div>
 <h3>How do I test this script?</h3>
-<p class="instructions">To test the detection script, simply change your system timezone and refresh this page. In Chrome you will have to open a new tab for the new timezone to be detected, and Safari needs to be restarted (unfortunately nothing that JavaScript can solve).</p>
+<p class="instructions">To test the detection script, simply change your system timezone and refresh this page. In Chrome and Opera you will have to open a new tab (and sometimes restart) for the new timezone to be detected.</p>
 <h3>What is the Olson Database?</h3>
 <p class="instructions">The Olson database, also known as the <strong>tz database</strong>. Is a public domain collaborative compilation of information about the world's timezones.</p>
 <p class="instructions">It is widely used as basis for timezone information in operating systems and software. Most platforms and programming languages have libraries that support it.</p>
