Minor updates to zoneinfo names and what is displayed when printing.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   }
   
   a:hover {
-    border-color: #000;
+    border-color: #fff;
   }
   </style>
   <script type="text/javascript" src='detect_timezone.js'></script>
@@ -108,7 +108,7 @@
 
 <body>
 
-<h1>Automatic Timezone Detection Using JavaScript</h3>
+<h1>Automatic Timezone Detection Using JavaScript</h1>
 <p class="info">This script is open source and hosted as <a href="https://bitbucket.org/pellepim/jstimezonedetect"/>jsTimezoneDetect @ Bitbucket</a>.</p>
 <div id="content">
 <p id="tz_info"></p>
